Create working restart service with jpackage.